--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
-
+body{
+    background-image: url("https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1082&q=80");
+}
 h1{
     color: brown;
 }
